[tool.poetry]
name = "pymage_size"
version = "1.4.1"
description = "A Python package for getting the dimensions of an image without loading it into memory."
authors = ["CobaltCore <cobaltcore@yandex.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kobaltcore/pymage_size"
homepage = "https://github.com/kobaltcore/pymage_size"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^20.8b1"
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
