[tool.poetry]
name = "pymage_size"
version = "1.5.0"
description = "A Python package for getting the dimensions of an image without loading it into memory."
authors = ["cobaltcore <cobaltcore@yandex.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kobaltcore/pymage_size"
homepage = "https://github.com/kobaltcore/pymage_size"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"
pytest = "^7.1.2"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
