[tool.poetry]
name = "pymage_size"
version = "1.6.0"
description = "A Python package for getting the dimensions of an image without loading it into memory."
authors = ["cobaltcore <cobaltcore@yandex.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kobaltcore/pymage_size"
homepage = "https://github.com/kobaltcore/pymage_size"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pre-commit = "^3.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 120

[tool.ruff]
fix = true
force-exclude = true # necessary for excludes to work in pre-commit
# exclude = [
#     "path/",
# ]
ignore = [
    "E402",
    "E722",
    "TID252",
    "C901",
]
line-length = 120
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "S105",
    "S106",
    "S107",
    "C",
    "B",
    "Q",
    "RUF",
]
